--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,20 @@ jobs:
       ENV: demo
     steps:
       - uses: actions/checkout@v2
+      - name: setup gcp
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{secrets.GCLOUD_PROJECT_ID}}
+          service_account_key: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+          export_default_credentials: true
+      - name: set terraform version
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.6       -
+      - name: setup terraform backend
+        run: |
+          echo "bucket = \"${{secrets.TF_STATE_BUCKET}}\"" > ./terraform/env/${ENV}/terraform.backend
+          echo "prefix = \"${{secrets.TF_STATE_PREFIX}}\"" >> ./terraform/env/${ENV}/terraform.backend
       - name: set python version
         uses: actions/setup-python@v2
         with:
@@ -23,16 +37,6 @@ jobs:
         run: brew install tfsec
       - name: code-quality
         run: make code-quality
-      - name: setup gcp
-        uses: google-github-actions/setup-gcloud@master
-        with:
-          project_id: ${{secrets.GCLOUD_PROJECT_ID}}
-          service_account_key: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
-          export_default_credentials: true
-      - name: setup terraform backend
-        run: |
-          echo "bucket = \"${{secrets.TF_STATE_BUCKET}}\"" > ./terraform/env/${ENV}/terraform.backend
-          echo "prefix = \"${{secrets.TF_STATE_PREFIX}}\"" >> ./terraform/env/${ENV}/terraform.backend
       - name: terraform plan
         run: make env=${ENV} plan
       - uses: actions/upload-artifact@v2
@@ -59,12 +63,14 @@ jobs:
           project_id: ${{secrets.GCLOUD_PROJECT_ID}}
           service_account_key: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
           export_default_credentials: true
+      - name: set terraform version
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.6       -
       - name: setup terraform backend
         run: |
           echo "bucket = \"${{secrets.TF_STATE_BUCKET}}\"" > ./terraform/env/${ENV}/terraform.backend
           echo "prefix = \"${{secrets.TF_STATE_PREFIX}}\"" >> ./terraform/env/${ENV}/terraform.backend
-      - name: terraform plan
-        run: make env=${ENV} plan
       - uses: actions/download-artifact@v2
         with:
           name: terraform-plan
@@ -73,3 +79,5 @@ jobs:
         with:
           name: app-zip
           path: ./terraform/deploy/generated/app.zip
+      - name: terraform apply
+        run: make env=${ENV} apply
