--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
   code-quality:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: set python version
         uses: actions/setup-python@v2
         with:
