--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,12 +92,13 @@ jobs:
     needs: apply
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: set python version
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
           architecture: 'x64'
-      - name: terraform apply
+      - name: api-tests
         run: make api-tests
         env:
           TEST_URL: https://fourth-library-325721.ue.r.appspot.com
